--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "devDependencies": {
         "@mdit/plugin-img-size": "^0.13.1",
         "@types/node": "^22.9.0",
-        "vitepress": "^1.3.4",
+        "vitepress": "^2.0.0-alpha.15",
         "vitepress-plugin-tabs": "^0.5.0",
         "vitepress-sidebar": "^1.27.1"
     },
