--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "@mdit/plugin-img-size": "^0.13.1",
         "@types/node": "^22.9.0",
         "vitepress": "^2.0.0-alpha.15",
-        "vitepress-plugin-tabs": "^0.5.0",
+        "vitepress-plugin-tabs": "^0.7.3",
         "vitepress-sidebar": "^1.27.1"
     },
     "scripts": {
@@ -14,6 +14,7 @@
         "docs:preview": "vitepress preview docs"
     },
     "dependencies": {
-        "markdown-it": "^14.1.0"
+        "markdown-it": "^14.1.0",
+        "vitepress-plugin-image-viewer": "^1.1.6"
     }
 }
